webui/static/base_style_v14.css
/* ... */
.title-network-indicator-container {
    margin: auto 0 auto 0.5rem;
    display: inline-flex;
    padding: 0.5rem 0.75rem;
    height: 1.5rem;
    justify-content: center;
    align-items: center;
    border: 1px solid #c4cffc;
    border-radius: 1.25rem;
}

.title-network-indicator-name {
    display: inline-block;
    /*font-weight: 600;*/
    font-size: 0.75rem;
    line-height: 1rem;
}


.global-banner {
    margin-bottom: 0 !important;
}

.container {
    margin: 0 20px;
}

.content {
    max-width: 1280px;
    margin: auto;
    padding: 8px;
    font-size: 0.95rem;
}

.footer-container {
    padding: 0 8px;
}

.footer {
    max-width: 1280px;
    margin: auto;
    padding: 8px;
    font-size: 0.9rem;
}

.settings {
    max-width: 1280px;
    margin: auto;
    padding: 32px 8px 8px 8px;
    font-size: 0.9rem;
}

#search {
    width: 100%;
}

.menubar {
    max-width: 1280px;
    flex: 1 1 auto;
    margin: auto;
    display: flex;
    padding: 0 8px;
}

.menubar .dropdown > li > a {
    margin-top: 2px;
    margin-bottom: -2px;
}

.top-bar-right {
    width: 35%;
}

.menu .menu-text {
    padding-left: 0;
}

.top-bar input {
    max-width: 100%;
}
.input-group {
    margin-bottom: 0;
}

.mono {
    font-family: Hack, monospace;
    font-size: 0.825rem;
}

.note {
    font-size: 0.75rem;
    color: #999;
}

.data-line {
    padding: 0.5rem 0;
    border-bottom: 1px solid #ccc;
}

.sub-data-line {
    padding: 0.5rem 0 0.5rem 1rem;
    border-bottom: 1px solid #ccc;
}

.data-line-value {
    overflow-wrap: break-word;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input[type=number] {
    -moz-appearance: textfield;
}

.pagination {
    display: inline-block;
}

#goto {
    display: inline-block;
}

#goto input {
    height: 2rem;
    width: 50px;
}

.number-separator {
    user-select: none;
    -webkit-user-select: none;
}

input:not([type]) {
    height: 2rem;
    display: block;
    box-sizing: border-box;
    width: 100%;
    margin: 0 0 1rem;
    padding: 0.5rem;
    border: 1px solid #cacaca;
    border-radius: 0;
    background-color: #fefefe;
    box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
    font-family: inherit;
    font-size: 1rem;
    font-weight: normal;
    line-height: 1.5;
    color: #0a0a0a;
    transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
    appearance: none;
}

input:not([type]):focus {
    outline: none;
    border: 1px solid #8a8a8a;
    background-color: #fefefe;
    box-shadow: 0 0 5px #cacaca;
    transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
}

#ticker {
    margin-top: 20px;
}

#recent-blocks {
    margin-top: 20px;
}

.ticker-cell-content {
    height: 64px;
    margin: 8px 0;
}

.ticker-cell-data {
    font-size: 1.5rem;
    display: flex;
    align-items: center;
}

.ticker-cell-data-note {
    font-size: 1rem;
    color: #999;
}

[data-tippy-content] {
    cursor: help;
    text-decoration: underline dotted;
}

.timestamp-font-size {
    font-size: 1.3rem;
}

#data {
    margin: 20px 4px;
}

.text-alert {
    color: #cc4b37;
}

.sup {
    font-size: 1rem;
    vertical-align: super;
}

table {
    margin-top: 10px;
}

.table-wrap.tabs-panel.is-active {
    display: block;
    overflow-x: auto;
}

.table-wrap:not(.tabs-panel) {
    display: block;
    overflow-x: auto;
}

pre {
    font-size: 0.825rem;
    background-color: #f8f8f8;
    padding: 10px;
    overflow-y: scroll;
    max-height: 800px;
}

.tabs {
    margin-top: 20px;
}

.tabs-title > a {
    font-size: 0.9em;
    padding: 0.75rem;
}

#read input[type="submit"] {
    padding: 8px;
}

#read input:not([type]), #read input[type="text"] {
    font-size: 0.85rem !important;
    font-family: Hack, monospace !important;
}

#rejected-transitions {
    margin-top: 20px;
}

.box-drawing {
    font-family: "MS Gothic", "AppleGothic", "Hiragino Maru Gothic ProN", "SimSun", monospace;
}

.data {
    margin: 20px 4px;
}

#wallet-connect-button {
    margin-bottom: 0;
}

#wallet-connect-text {
    margin-left: 8px;
}

.decrypted {
    color: green;
}

textarea {
    font-family: Hack, monospace;
    height: 400px;
}

.mono-only {
    font-family: Hack, monospace;
}

code, pre {
    font-family: Hack, monospace;
}

.htmx-indicator {
    display: block;
    opacity: 1 !important;
}

.htmx-request.htmx-indicator {
    opacity: 0.4 !important;
}

.fa-regular {
    margin-left: 0.5em;
    color: #999;
}

.block-validator > a {
    margin: 0 0.25em 0.25em 0;
    padding: 2px 8px;
    display: inline-block;
    border: 1px solid;
    border-radius: 4px;
}

.block-validator > a:has(.yes) {
    border-color: green;
}

.block-validator > a:has(.no) {
    border-color: darkred;
}

.block-validator > a > .yes {
    color: green;
}

.block-validator > a > .no {
    color: darkred;
}

.block-validator {
    max-height: 6em;
    overflow: hidden;
    position: relative;
}

.block-validator-expand {
    position: absolute;
    top: 3rem;
    height: 3rem;
    width: 100%;
    display: flex;
    pointer-events: none;
    background:
        linear-gradient(
            rgba(255, 255, 255, 0),
            rgba(255, 255, 255, 0.8) 50%,
            rgba(255, 255, 255, 0.95) 75%,
            rgba(255, 255, 255, 1)
        );
}

.block-validator-expand span {
    align-self: flex-end;
    width: 100%;
    text-align: center;
    padding-top: 0.5rem;
    cursor: pointer;
    pointer-events: auto;
}

.label .mono {
    font-size: 0.8rem;
}

